stub out the rest of the guide

--- a/index.html
+++ b/index.html
@@ -60,27 +60,27 @@
 
             <li>LAYOUT</li>
             <li role="menuitem"><a href="#grid-system">Grid system</a></li>
-            <li role="menuitem"><a href="#">Pre-header</a></li>
-            <li role="menuitem"><a href="#">Footer</a></li>
-            <li role="menuitem"><a href="#">Navigation</a></li>
-            <li role="menuitem"><a href="#">Templates</a></li>
+            <li role="menuitem"><a href="#navigation">Navigation</a></li>
+            <li role="menuitem"><a href="#pre-header">Pre-header</a></li>
+            <li role="menuitem"><a href="#footer">Footer</a></li>
+            <li role="menuitem"><a href="#templates">Templates</a></li>
 
             <li class="divider"></li>
 
             <li>MODULES</li>
-            <li role="menuitem"><a href="#">Byline</a></li>
-            <li role="menuitem"><a href="#">Thumbnail grid</a></li>
-            <li role="menuitem"><a href="#">Buttons</a></li>
-            <li role="menuitem"><a href="#">Accordion</a></li>
+            <li role="menuitem"><a href="#byline">Byline</a></li>
+            <li role="menuitem"><a href="#thumbnail-grid">Thumbnail grid</a></li>
+            <li role="menuitem"><a href="#buttons">Buttons</a></li>
+            <li role="menuitem"><a href="#accordion">Accordion</a></li>
 
             <li class="divider"></li>
 
             <li>BRAND</li>
-            <li role="menuitem"><a href="#">Colors</a></li>
-            <li role="menuitem"><a href="#">Horizontal logos</a></li>
-            <li role="menuitem"><a href="#">Vertical logos</a></li>
-            <li role="menuitem"><a href="#">Diamond logo</a></li>
-            <li role="menuitem"><a href="#">Product Logo Mark</a></li>
+            <li role="menuitem"><a href="#colors">Colors</a></li>
+            <li role="menuitem"><a href="#horizontal-logos">Horizontal logos</a></li>
+            <li role="menuitem"><a href="#vertical-logos">Vertical logos</a></li>
+            <li role="menuitem"><a href="#diamond">Diamond logo</a></li>
+            <li role="menuitem"><a href="#logo-mark">Product Logo Mark</a></li>
           </ul>
       </div>
       <div class="medium-9 columns">
@@ -284,8 +284,6 @@
               <h4 id="grid-system">Grid system</h4>
               <p><a href=http://foundation.zurb.com/docs/components/grid.html">Foundation's grid system</a> is based on rows and columns. *Blueline's rows have a <code>max-width</code> of <code>1200px</code>. If you want to allow your content to be wider than 1200px, simply omit the use of the <code>row</code> div and use only the column classes. You do not need to use columns within rows. *However, you may find it helpful to use <code>.row.full-width</code> if you are having difficulty aligning columns.</p>
 
-              <h5>Here&rsquo;s your basic grid:</h5>
-              <pre><code>
                 <div class="row">
                   <div class="large-12 columns">
                     <div class="callout panel">
@@ -322,7 +320,95 @@
                     </div>
                   </div>
                 </div>
+              <pre><code>
+                &lt;div class="row"&gt;
+                  &lt;div class="large-12 columns"&gt;
+                    &lt;div class="callout panel"&gt;
+                      &lt;p&gt;&lt;strong&gt;This is a twelve column section in a row.&lt;/strong&gt; Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.&lt;/p&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+                &lt;div class="row"&gt;
+                  &lt;div class="large-6 medium-6 columns"&gt;
+                    &lt;div class="callout panel"&gt;
+                      &lt;p&gt;Six columns&lt;/p&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                  &lt;div class="large-6 medium-6 columns"&gt;
+                    &lt;div class="callout panel"&gt;
+                      &lt;p&gt;Six columns&lt;/p&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+                &lt;div class="row"&gt;
+                  &lt;div class="large-4 medium-4 small-4 columns"&gt;
+                    &lt;div class="callout panel"&gt;
+                      &lt;p&gt;Four columns&lt;/p&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                  &lt;div class="large-4 medium-4 small-4 columns"&gt;
+                    &lt;div class="callout panel"&gt;
+                      &lt;p&gt;Four columns&lt;/p&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                  &lt;div class="large-4 medium-4 small-4 columns"&gt;
+                    &lt;div class="callout panel"&gt;
+                      &lt;p&gt;Four columns&lt;/p&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
               </pre></code>
+            </section>
+            <section>
+              <h4 id="navigation">Navigation</h4>
+            </section>
+            <section>
+              <h4 id="pre-header">Pre-header</h4>
+            </section>
+            <section>
+              <h4 id="footer">Footer</h4>
+            </section>
+            <section>
+              <h4 id="templates">Templates</h4>
+            </section>
+
+
+            <section>
+              <h2>Modules</h2>
+              <h4 id="byline">Byline</h4>
+            </section>
+            <section>
+              <h4 id="thumbnail-grid">Thumbnail grid</h4>
+            </section>
+            <section>
+              <h4 id="buttons">Buttons</h4>
+            </section>
+            <section>
+              <h4 id="accordion">Accordion</h4>
+            </section>
+            <section>
+              <h4 id="">Other Foundation modules</h4>
+            </section>
+            <section>
+              <h4 id="">Other Foundation modules</h4>
+            </section>
+
+
+            <section>
+              <h2>Brand</h2>
+              <h4 id="colors">Colors</h4>
+            </section>
+            <section>
+              <h4 id="horizontal-logos">Horizontal logos</h4>
+            </section>
+            <section>
+              <h4 id="vertical-logos">Vertical logos</h4>
+            </section>
+            <section>
+              <h4 id="diamond">Diamond logo</h4>
+            </section>
+            <section>
+              <h4 id="logo-mark">Product logo mark</h4>
             </section>
           </div>
         </div>
